# c--shared-lib

./: .gitignore  LICENSE  README.md
executable/: CMakeLists.txt  main.cpp
share_library/: CMakeLists.txt  shared-lib.cpp
share_library/include/: share-lib.hpp
static-lib/: CMakeLists.txt  share_lib.cpp
